--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "sass": "^1.54.8",
     "tailwindcss": "^3.1.8"
